Bug 237855 Mozilla doesn't recognise MathML 2.0 DOCTYPE and DTD and chokes on its entities patch by alexey@optus.net r=rbs sr=jst a=dbaron